--- a/css/menu.css
+++ b/css/menu.css
@@ -223,6 +223,10 @@
     transition-delay: 1720ms;
 }
 
+.menu-icon:checked~.nav ul li:nth-child(6) {
+    transition-delay: 1800ms;
+}
+
 /* Стили для каждого элемента списка меню */
 .nav ul li {
     position: relative;
