--- a/css/menu.css
+++ b/css/menu.css
@@ -227,6 +227,10 @@
     transition-delay: 1800ms;
 }
 
+.menu-icon:checked~.nav ul li:nth-child(7) {
+    transition-delay: 1880ms;
+}
+
 /* Стили для каждого элемента списка меню */
 .nav ul li {
     position: relative;
